<resources>
    <string name="app_name">MyBikePark</string>

    <string name="btContinuar">CONTINUAR</string>
    <!--estados-->
    <string name="txtNome">Nome</string>
    <string name="txtCapital">Capital</string>
    <string name="txtPopulacao">População</string>
    <string name="txtArea">Área</string>
    <string name="txtAcre">Acre</string>
    <string name="btVoltar">Voltar</string>
    <string name="btcheckBox">Li e concordo com os termos de uso.</string>


    <!--Cadastro Usuario-->
    <!-- txt -->
    <string name="txtCredenciaisDeAcesso">Credenciais de Acesso</string>
    <string name="txtCadUserNome">Nome</string>
    <string name="txtCadUserEmail">Email</string>
    <string name="txtCadUserSenha">Senha</string>
    <string name="txtCadUserConfirmarSenha">Confirmar Senha</string>
    <!--Edit-->
    <string name="editHintNome">Informe seu nome</string>
    <string name="editHintEmail">Informe seu email</string>
    <string name="editHintSenha">Informe sua senha</string>
    <string name="editHintConfirmarSenha">Informe confirmar senha</string>


    <!--botoes-->
    <string name="txtTituloLogin">LOGIN</string>
    <string name="btCadVoltar">Cancelar</string>
    <string name="btCadCadastrar">Cadastrar</string>
    <string name="chTermo">Li é concordo com os termos de privacidade</string>

    <!--Login Usuario-->
    <string name="txtEmailLogin">Email</string>
    <string name="txtSenhaLogin">Senha</string>
    <string name="txtRecuperarSenha">Recuperar Senha</string>
    <string name="editEmailLogin">Digite o e-mail cadastrado ...</string>
    <string name="editSenhaLogin">Digite sua senha de acesso ...</string>
    <string name="btAcessar">Acessar</string>
    <string name="btSejaVip">Cadastrar</string>
    <string name="ckLembrarSenha">Lembrar senha</string>
    <string name="txtVersao">Versão V1.0</string>
    <string name="txtPoliticas">Ler Politica de privacidade &amp; Termos de uso.</string>

    <!--ClienteVIP-->
    <string name="txtTituloCad">Cadastro</string>
    <string name="txtPrimeiroNomeClivip">Primeiro nome</string>
    <string name="txtSobreNome">Sobre nome</string>
    <string name="txtNovoVipTitulo">Novo Vip</string>
    <string name="editPrimeiroNomeVip">Informe seu primeiro nome ...</string>
    <string name="editSobreNomeVip">Informe seu sobre nome ...</string>
    <string name="ckBoxPessoaFisica">Pessoa Fisica</string>
    <string name="btSalvarEContinuar">SALVAR E CONTINUAR</string>
    <string name="btCancelarVip">CANCELAR</string>

    <!--pessoa fisica-->
    <string name="txtPFTITULO">PESSOA FÍSICA</string>
    <string name="txtCPFPF">CPF</string>
    <string name="txtNomeCompletoPF">Nome Completo</string>
    <string name="editCPFPF">Digite seu CPF</string>
    <string name="editNomeCompletoPF">Nome Completo igual do CPF</string>
    <string name="btSalvarContinuarPF">SALVAR E CONTINUAR</string>
    <string name="btVoltarPF">Voltar</string>
    <string name="btCancelarPF">CANCELAR</string>
    <!--pessoa juridica-->
    <string name="txtPJTITULO">PESSOA JURÍDICA</string>
    <string name="txtCPJPJ">CNPJ</string>
    <string name="txtRazaoSocialPJ">Razão Social</string>
    <string name="editCPJPJ">Digite seu CPJ</string>
    <string name="chSimplesNacional">Simples Nacional</string>
    <string name="chMei">MEI</string>
    <string name="txtDataAberturaEmpresa">Data da Abertura da Empresa</string>
    <string name="editDataAberturaEmpresa">Informe a data de abertura da empresa</string>
    <string name="editRazaoSocialPJ">Razão Social igual do cartão CNPJ</string>
    <string name="btSalvarContinuarPJ">SALVAR E CONTINUAR</string>
    <string name="btVoltarPJ">Voltar</string>
    <string name="btCancelarPJ">CANCELAR</string>

    <!--Recuperar senha-->
    <string name="txtTituloRecuperarsenha">Recuperar Senha</string>
    <string name="txtEmailRecuperarSenha">E-mail</string>
    <string name="editEmailRecuperarSenha">Digite o e-mail cadastrado</string>
    <string name="btRecupara">RECUPERAR</string>
    <string name="btVoltarRecupara">Voltar</string>

    <!--Menu usuario-->
    <string name="txtTituloMenuUser">Menu</string>
    <string name="btMeusDados">Meus Dados</string>
    <string name="btAtualizarMeusDados">Atualizar Meus Dados</string>
    <string name="btExcluirMinhaConta">Excluir Minha Conta</string>
    <string name="btConsultarClienteVip">Consultar Cliente Vip</string>
    <string name="btListaEstados">Lista Estados</string>
    <string name="btSair">Sair do Aplicativo</string>

    <!--Meus dados-->
    <string name="txtMeusdados">MEUS DADOS</string>


    <!--Atualizar meus dados-->
    <string name="txtAtualizarMeusDados">Atualizar Meus Dados</string>
    <string name="btEditarUPDATE">EDITAR</string>
    <string name="btSalvarUPDATE">SALVAR</string>

    <!--Linha client detalhe-->
    <string name="btnSalvarContinuar">Salvar e Continuar</string>

    <!-- fragmeto -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente</string>
    <string name="nav_header_subtitle">Minhas asas estão sobre duas rodas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="modelo_fragment">Cliente VIP DEMO</string>
    <!-- Opções do Menu Lateral Drawer -->
    <string name="fragmento_adicinar_cliente">Adicionar Cliente</string>
    <string name="fragmento_listar_clientes">Listar Riders</string>
    <string name="fragmento_listar_clientes_cards">Listar Riders(Cards)</string>

    <string name="itemImportanciaDaBike">Importancia da Bike</string>
    <string name="titulo_preto">Preto</string>
    <string name="fragmento_adicionarParque">Adicionar Parque</string>

    <string name="titulo_vermelho">Vermelho</string>
    <string name="listaDeParques">Lista De Parques</string>
    <string name="titulo_azul">Azul</string>

    <!-- Opções do Menu Principal -->
    <string name="meu_perfil">Meu Perfil</string>
    <string name="adicionar_novo_cliente">Adicionar Novo Cliente</string>


    <!-- Textos para o Layout Adicionar Novo Cliente -->
    <string name="novoCliente">Adicionar Novo Cliente</string>


    <!--tela map-->
    <string name="txt_coordenadas_gps_java">Cordenadas GPS java</string>
    <string name="txtLongitude">Longitude</string>
    <string name="txtLatitude">Latitude</string>
    <string name="txt_valor_zero">0.00</string>
    <string name="txtPinContenteDescriptionMap">Pin GPS do mapa</string>
    <string name="title_activity_maps">Map</string>
    <string name="btAddParquesalvar">SALVAR</string>
    <string name="btAddParqueCancelar">CANCELAR</string>
    <string name="txtUmPoucoSombreBike">"1. Emagrece  Andar de bicicleta é um exercício que acelera o seu metabolismo, ou seja, faz com que o seu corpo queime calorias mais rapidamente. O resultado é menos acúmulo de gordura no organismo e, consequentemente, uma silhueta mais magra.  \n 2. Melhora o tônus muscular  Como todo exercício físico, pedalar exige força dos músculos. Por isso, pedalar regularmente vai fazer com que você ganhe força muscular e tônus, sobretudo na parte inferior do seu corpo. Empurrar os pedais envolve seus quadríceps, os músculos das coxas, e os glúteos. Os braços e ombros também são usados, principalmente ao segurar o guidão dos dois lados para subir morros íngremes.  \n 3. Proporciona bem-estar  Você já viu alguém pedalando com expressão de raiva ou tristeza? Provavelmente não, já que pedalar faz com que o seu organismo libere endorfinas e serotoninas, hormônios que causam sensação de prazer.  Por isso, além de fazer bem para o corpo, andar de bike ajuda a combater a depressão, ansiedade e o estresse.\n 4. Aumenta o fôlego  Se você já viu um ciclista subindo uma ladeira íngreme deve ter se perguntado: como ele consegue? A resposta está nos pulmões reforçados.  Quando pedala, você precisa de mais oxigênio e acaba exercitando mais a respiração. Com o tempo, começa a ganhar fôlego para aguentar não só as longas subidas, mas pedalar por longas distâncias.  O ganho de resistência física vai além dos momentos de pedalada e será útil para todas as atividades do seu dia a dia, como brincar com os filhos e subir escadas. \n 5. Não prejudica as articulações  Diferentemente de outras atividades, como a corrida, no ciclismo, o seu contato com o chão não fica a cargo das suas pernas e pés. Isso faz com que todo o impacto transmitido para as articulações, principalmente nos pés e joelhos, seja pequeno.  Então se você tem alguma restrição física para atividades como correr, jogar tênis ou futebol, já sabe que a solução é investir na bicicleta. \n  6. Reduz o colesterol  O ciclismo, como você já sabe, acelera o metabolismo. Isso faz com que as substâncias que geram o colesterol ruim (LDL) sejam rapidamente queimadas pelo seu organismo. \n 7. Ajuda a prevenir e controlar o diabetes  Uma pessoa diabética pode e deve praticar exercícios físicos e pedalar é um dos melhores para este grupo de pessoas. Andar de bike regularmente ajuda a manter os níveis de açúcar no sangue estáveis, além de reduzir o risco de complicações cardiovasculares.  Quem não é diabético mas quer prevenir a doença também deve incluir essa atividade na rotina! \n 8. Controla a pressão arterial  Que andar de bike tonifica os músculos você já sabe. O que muita gente desconhece é que pedalar também trabalha as veias e artérias. O processo de contração e relaxamento delas fica mais rápido durante a atividade, o que ajuda a baixar a pressão arterial. O seu coração agradece! \n 9. Melhora a coordenação motora  Andar de bicicleta é divertido e ainda contribui para melhorar a sua coordenação motora. Como a atividade envolve todo o corpo (braços, pernas, mãos), ainda faz com que você fique com reflexos mais rápidos.  10. Auxilia na recuperação de lesões ósseas e artrite  Por ser um exercício de baixo impacto, andar de bike contribuindo para a saúde das articulações, prevenindo quedas e fraturas. É um exercício físico ideal para prevenir osteoartrite e osteoporose. "</string>

    <string name="toolbarImportancidaBike">Beneficios da Bike</string>

</resources>