<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item android:id="@+id/nav_listar_clientes_cards"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/fragmento_listar_clientes_cards" />

        <item android:id="@+id/nav_ImportanciaDabike"
            android:icon="@drawable/ic_baseline_import_contacts_24"
            android:title="@string/itemImportanciaDaBike" />

        <item android:id="@+id/nav_adicionar_parque"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/fragmento_adicionarParque" />



    </group>

</menu>
