<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15151A"
    tools:context=".view.usuario.LoginUserActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@color/colorBranco"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="25dp"
            android:paddingEnd="30dp"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/txtEmail"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEmailLogin"
                android:textColor="@color/colorVerde"
                android:textSize="18sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/editEmailLoginID"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:defaultFocusHighlightEnabled="false"
                android:hint="@string/editEmailLogin"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtSenhaA"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSenhaLogin"
                android:textColor="@color/colorVerde"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSenhaLoginID"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editSenhaLogin"
                android:inputType="numberPassword" />

            <CheckBox
                android:id="@+id/checkBoxLembrarSenhaLogin"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="lembrarSenha"
                android:text="@string/ckLembrarSenha"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRecuperarSenhaLogin"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/txtRecuperarSenha"
                android:textColor="@color/colorAzul"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/btAcessarLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/btAcessar"
            android:textAllCaps="false"
            android:textColor="@color/colorBranco"
            android:background="@drawable/ripple"
            android:textSize="16sp"
            app:backgroundTint="@color/vermelho" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Você é novo por aqui?"
            android:textColor="@color/colorBranco"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btSejaVipLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/ripple"
            android:text="@string/btSejaVip"
            android:textColor="@color/vermelho"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVersaoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtVersao"
            android:textColor="@color/colorBranco"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textPoliticaLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/txtPoliticas"
            android:textColor="@color/colorBranco"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>